tests/typing/fail/mismatch_postfix.crs
fn main() {
    var b : bool;
    b++;
}